--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div>
 <img id="sai" src="./SaiSatcharitra.jpg" >
-<img id="saisayings" src="images/11-assurances-shirdi-saibaba.jpg">
+<img id="saisayings" src="./11-assurances-shirdi-saibaba.jpg">
 </div>
 <div id="alignimg">
 
@@ -30,7 +30,7 @@
           <h4 class="modal-title">Contact</h4>
         </div>
         <div class="modal-body">
-        	<form method="POST" action="mailto:ukotamraju@gmail.com">
+        	<form method="POST" action="https://formspree.io/saijyothik99@gmail.com">
   <div class="form-group">
   	<p>Please Send your Name and Email address. We will get back to you shortly!!</p>
   	<label for="Name">Name</label>
