--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div>
 <img id="sai" src="./SaiSatcharitra.jpg" >
-<img id="saisayings" src="./11-assurances-shirdi-saibaba.jpg">
+<img id="saisayings" src="./assurances.jpg">
 </div>
 <div id="alignimg">
 
