--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <h4 class="modal-title">Contact</h4>
         </div>
         <div class="modal-body">
-        	<form method="POST" action="https://formspree.io/saijyothik99@gmail.com">
+        	<form method="POST" action="https://formspree.io/ukotamraju@gmail.com">
   <div class="form-group">
   	<p>Please Send your Name and Email address. We will get back to you shortly!!</p>
   	<label for="Name">Name</label>
