--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
   	<label for="Name">Name</label>
   	 <input type="text" class="form-control" placeholder="Name">
     <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group">
   <label for="comment">Comment:</label>
-  <textarea class="form-control" rows="5" id="comment"></textarea>
+  <textarea class="form-control" rows="5" id="comment" name="message"></textarea>
 </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
